--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "sfcookies": "^1.0.2"
+    "redux-thunk": "^2.3.0",
+    "sfcookies": "^1.0.2",
+    "uninstall": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +36,10 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1"
+    "enzyme-adapter-react-16": "^1.15.1",
+    "fetch-mock": "^7.5.1",
+    "node-fetch": "^2.6.0",
+    "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "collectCoverageFrom": [
